Bug 429113 - Missing app shortcut Icons
Summary: Missing app shortcut Icons
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.11.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-14 20:04 UTC by agentxlax
Modified: 2020-12-05 07:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.11.90
Sentry Crash Report:


Attachments
A copy of my shortcuts folder (11.00 KB, application/gzip)
2020-11-15 19:51 UTC, agentxlax
Details

Note You need to log in before you can comment on or make changes to this bug.
Description agentxlax 2020-11-14 20:04:37 UTC
Linux/KDE Plasma: EndeavourOS latest ISO
(available in About System)
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5,75.0
Qt Version: 5.15.1

Yesterday updates for various Plasma / KDE apps were available including for Dolphin. I installed them and all seemed fine. Rebooted to day to find a lot of the icons for app shortcuts in a folder I keep open were missing. I have tried to replace them with no luck. I did a test on using a system icon for FreeFileSync and it worked. What doesn't seem to work is browsing for a icon, and selecting one. Please see the below linked thread. Thanks

https://forum.endeavouros.com/t/dolphin-missing-address-bar-and-icons/9673
Comment 1 Nate Graham 2020-11-15 16:04:04 UTC
Based on the info in the forum thread, it looks like all issues have been resolved. Could have been packaging issues.
Comment 2 agentxlax 2020-11-15 17:41:29 UTC
EXCUSE ME!!!!! Want to try that again? The info in the thread does not even come close to suggesting the icon issue has been resolved.
Comment 3 Méven Car 2020-11-15 17:51:37 UTC
(In reply to agentxlax from comment #2)
> EXCUSE ME!!!!! Want to try that again? The info in the thread does not even
> come close to suggesting the icon issue has been resolved.

Please stay courteous, mistakes can happen. Nate I guess thought the bug was about dolphin's toolbar.

This is not necessarily a dolphin bug, and since it affects some desktop but not others, we need to track down why.

Could you post here a desktop file affected by the missing icon.
Comment 4 Méven Car 2020-11-15 17:53:05 UTC
Waiting for .desktop file from bug reporter agentxlax.
Comment 5 agentxlax 2020-11-15 19:49:24 UTC
(In reply to Méven Car from comment #3)
> (In reply to agentxlax from comment #2)
> > EXCUSE ME!!!!! Want to try that again? The info in the thread does not even
> > come close to suggesting the icon issue has been resolved.
> 
> Please stay courteous, mistakes can happen. Nate I guess thought the bug was
> about dolphin's toolbar.
> 
> This is not necessarily a dolphin bug, and since it affects some desktop but
> not others, we need to track down why.
> 
> Could you post here a desktop file affected by the missing icon.

Ok I get It. Thinking of editing the thread and excluding anything to do with the address bar since that is actually a design change.
Comment 6 agentxlax 2020-11-15 19:51:21 UTC
Created attachment 133370 [details]
A copy of my shortcuts folder

These were added to the folder using various methods.
Comment 7 Méven Car 2020-11-15 20:53:36 UTC
There are issues with links, for instance Emby file content is :
```
[Desktop Entry]
Icon=/mnt/Downloads/App Icons/Emby..png
Type=Link
URL[$e]=http://....
```

This works on the desktop folder panel, or when displaying the file properties, the icon is rendered correctly.

I tracked down the causing commit https://invent.kde.org/system/dolphin/-/commit/15baa93640bbb49162f26d439e006729ee9c3441 and notified the author.
Comment 8 agentxlax 2020-11-15 21:04:40 UTC
So this does directly have to do with the updates? I fixed the thread on the EOS forums.


https://forum.endeavouros.com/t/missing-icons-on-shortcuts-in-dolphin/9673
Comment 9 Bug Janitor Service 2020-11-15 21:15:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/112
Comment 10 Méven Car 2020-11-15 21:19:09 UTC
(In reply to agentxlax from comment #8)
> So this does directly have to do with the updates? I fixed the thread on the
> EOS forums.
> 

Yes the regression appeared in yet-to-be-released Dolphin 20.12.
Comment 11 agentxlax 2020-11-15 21:36:59 UTC
So just sit back and wait. I can do that. Thanks a lot guys.
Comment 12 Elvis Angelaccio 2020-11-19 21:48:37 UTC
Git commit b3c37507dc7032feed256b5e974590bd988cbac2 by Elvis Angelaccio, on behalf of Méven Car.
Committed on 19/11/2020 at 21:48.
Pushed by elvisangelaccio into branch 'release/20.12'.

Re-allow icons that are not theme icon

Particularly concerned are .desktop files.

See also:
15baa93640bbb49162f26d439e006729ee9c3441

M  +1    -1    src/kitemviews/kfileitemmodelrolesupdater.cpp

https://invent.kde.org/system/dolphin/commit/b3c37507dc7032feed256b5e974590bd988cbac2
Comment 13 agentxlax 2020-12-05 00:16:49 UTC
Update I believe that somehow in the process of fixing the icons somehow the Flatpak system was broken. I noticed shortly after the 5.20.4 updates that I had no Flatpak icons. Then I went to open an image and it open with Gwenview instead of KolourPaint. I closed it, rightclicked the image, went to reassign KolourPaint as the default and it was not listed. I then checked the apps menu and not lisyted on there either, nor were any of my other Flatpaks. Attempted 4 different ways of adding them back and each time it would fail to launch the program. The FlatPak shortcuts in my Shortcuts folder other than not having their icons. I get the below when updating everything via Konsole using Topgrade which updates the FlatPaks as well. Any suggestions On how to fix this? thanks

Note that the directories 

'/var/lib/flatpak/exports/share'
'/home/alienprober/.local/share/flatpak/exports/share'

are not in the search path set by the XDG_DATA_DIRS environment variable, so
applications installed by Flatpak may not appear on your desktop until the
session is restarted.

Looking for updates…
Nothing to do.

Note that the directories 

'/var/lib/flatpak/exports/share'
'/home/alienprober/.local/share/flatpak/exports/share'

are not in the search path set by the XDG_DATA_DIRS environment variable, so
applications installed by Flatpak may not appear on your desktop until the
session is restarted.
Comment 14 Méven Car 2020-12-05 07:50:36 UTC
(In reply to agentxlax from comment #13)
> Update I believe that somehow in the process of fixing the icons somehow the
> Flatpak system was broken. I noticed shortly after the 5.20.4 updates that I
> had no Flatpak icons. Then I went to open an image and it open with Gwenview
> instead of KolourPaint. I closed it, rightclicked the image, went to
> reassign KolourPaint as the default and it was not listed. I then checked
> the apps menu and not lisyted on there either, nor were any of my other
> Flatpaks. Attempted 4 different ways of adding them back and each time it
> would fail to launch the program. The FlatPak shortcuts in my Shortcuts
> folder other than not having their icons. I get the below when updating
> everything via Konsole using Topgrade which updates the FlatPaks as well.
> Any suggestions On how to fix this? thanks
> 
> Note that the directories 
> 
> '/var/lib/flatpak/exports/share'
> '/home/alienprober/.local/share/flatpak/exports/share'
> 
> are not in the search path set by the XDG_DATA_DIRS environment variable, so
> applications installed by Flatpak may not appear on your desktop until the
> session is restarted.
> 
> Looking for updates…
> Nothing to do.
> 
> Note that the directories 
> 
> '/var/lib/flatpak/exports/share'
> '/home/alienprober/.local/share/flatpak/exports/share'
> 
> are not in the search path set by the XDG_DATA_DIRS environment variable, so
> applications installed by Flatpak may not appear on your desktop until the
> session is restarted.

This is unrelated to this bug please report this elsewhere.

This seems like a distro/package or configuration issue as warning message says :
> '/var/lib/flatpak/exports/share'
> '/home/alienprober/.local/share/flatpak/exports/share'
Should be in XDG_DATA_DIRS variable env, it is most likely not a KDE related issue.