Re-allow icons that are not theme icon

Particularly concerned are .desktop files.

See also:
15baa93640bbb49162f26d439e006729ee9c3441

BUG: 429113